--- a/style.css
+++ b/style.css
@@ -158,3 +158,84 @@ header {
     color: #000000; /* Gray text color */
     text-align: center;
 }
+
+
+
+.project{
+    background-color: black;
+}
+.project .content{
+    margin-top: 30px;
+}
+.project-card {
+    background-color: #ffffff;
+    border: 1px solid #fff;
+    min-height: 14em;
+    width: 23em;
+    border-radius: 15px;
+    /* position: relative; /* Enable positioning for pseudo-elements */ 
+    overflow: hidden; /* Hide overflowing content */
+    /*display: flex; /* Arrange project image and info side-by-side */
+    /*width: 300px; /* Adjust width as needed */
+    margin: 20px; /* Add spacing between cards */
+    transition: 0.7s ease;
+}
+.project-card:hover{
+    transform: scale(1.2);
+}
+.project-card:after {
+    /* Pseudo-element for the border */
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2); /* Semi-transparent black */
+    transition: all 0.3s ease-in-out; /* Add smooth transition */
+}
+
+.project-card:hover:after {
+    /* Change border opacity on hover */
+    opacity: 0.8;
+}
+
+.project-img img{
+    width: 100%; /* Set width for image */
+   /* object-fit: cover;  Ensure image fills the space */
+  }
+  
+  .project-info {
+    /*width: 50%; /* Set width for project details */
+    padding: 1em; /* Add padding for content */
+    color: #fff; /* White text over dark background */
+    display: flex; /* Arrange category and title elements */
+    flex-direction: column; /* Stack them vertically */
+    justify-content: space-between; /* Align content at top and bottom */
+  }
+  
+  .project-catigory {
+    text-transform: uppercase;
+    font-size: 0.8rem; /* Adjust category text size */
+    color: #000;
+  }
+  .tt{
+    color: #000;
+  }
+  .project-title {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    font-weight: 900;
+    font-weight: bold;
+    margin-bottom: 5px; /* Add space below title */
+  }
+.more-details {
+    /*color: inherit; /* Inherit white text color */
+    text-decoration: none; /* Underline link on hover */
+}
+
+.more-details:hover {
+    /*text-decoration: underline; /* underline on hover */
+    color: rgba(4, 217, 255, 0.822);
+}
