--- a/style.css
+++ b/style.css
@@ -345,6 +345,19 @@ header {
 @media screen and (min-width: 768px) and (max-width: 1024px) {
     /* Add media query specific styles here for tablets */
     .content {
-      flex-direction: column; /* Stack content vertically on tablets */
+        justify-content: center;
+        flex-direction: column; /* Stack content vertically on tablets */
     }
 }
+@media (max-width: 300px) {
+    /* Add media query specific styles here for tablets */
+    .body {
+        flex-direction: column; /* Stack content vertically on tablets */
+        justify-content: center;
+        font-size: 10px;
+    }
+}
+.responsive-image {
+    width: 100%; /* Make the image responsive to the width of its container */
+    height: auto; /* Maintain aspect ratio */
+  }
